# pathpatterns-rs

./: Cargo.toml  Makefile
debian/: changelog  control
src/: lib.rs  match_list.rs  pattern.rs
