[package]
name = "pathpatterns"
version = "0.1.1"
authors = ["Wolfgang Bumiller <w.bumiller@errno.eu>"]
edition = "2018"
license = "AGPL-3"
description = "Include/exclude path list implementation with git-like globbing support."

exclude = [ "build", "debian" ]

[dependencies]
bitflags = "1.2"
libc = "0.2"
